[package]
name = "desktop-file-editor"
description = "A Lightweight TUI app made to edit basic info of .desktop files on Linux"
license = "MIT"
repository = "https://github.com/chishxd/desktop-file-editor"
readme = "README.md"
version = "0.1.1"
edition = "2024"
exclude = ["assets/*"]

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[[bin]]
name = "dfe"
path = "src/main.rs"

#Optimization yanked from ratatui docs
[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true        # Enables Link-time Optimization.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true      # Ensures debug symbols are removed.
